--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,8 @@
 version: 2.1
+jobs:
+  build:
+    docker:
+      - image: circleci/openjdk:21-jdk
 orbs:
   codecov: codecov/codecov@4.0.1
 workflows:
