--- a/UserService/pom.xml
+++ b/UserService/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.atkinson</groupId>
-    <artifactId>PhotographyApplication</artifactId>
+    <artifactId>UserService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>PhotographyAppilication</name>
     <description>PhotographyAppilication</description>
