--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=User-Service
-server.port=8081
+server.port=0
+eureka.client.service-url.defaultZone=http://localhost:8010/eureka
+
