--- a/DiscoveryService/src/main/resources/application.properties
+++ b/DiscoveryService/src/main/resources/application.properties
@@ -3,3 +3,4 @@ server.port=8010
 eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.service-url.defaultZone=https://${eureka.instance.hostname}:${server.port}/eureka
+eureka.server.renewal-percent-threshold=0.85
