--- a/ApiGateway/src/main/resources/application.yaml
+++ b/ApiGateway/src/main/resources/application.yaml
@@ -5,6 +5,9 @@ eureka:
     service-url:
       defaultZone:
         http://localhost:8010/eureka
+    registry-fetch-interval-seconds: 5
+  instance:
+    lease-renewal-interval-in-seconds: 5
 spring:
   application:
     name:
